--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="banner-img"><img src="image/banner-1.jpg" /></div>
     </section> 
-<!-- 
+
     <section class="about-main">
         <div class="container">
             <div class="row">
@@ -604,7 +604,7 @@
                 </div>
             </div>
         </div>
-</footer>  -->
+</footer>  
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
