--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <nav class="collapse navbar-collapse justify-content-end" id="menu">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="javascript:void(0);" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="javascript:void(0);" class="nav-link" id="active">Home</a></li>
                     <li class="nav-item"><a href="javascript:void(0);" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="javascript:void(0);" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="javascript:void(0);" class="nav-link">Features</a></li>
