--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    <header class="navbar navbar-expand-lg p-1">
+    <header class="navbar p-1 navbar-expand-lg p-1">
         <div class="container-fluid">
             <div class="col-3">
                 <a class="logo-img" href="javascript:void(0)"><img src="image/logo-white.png" alt="logo"></a>
